# calendar-reminder-system-aws

./: .gitignore
cal-rem-frontend/: Cargo.toml
cal-rem-frontend/src/: lib.rs
cal-rem-lambda/: Cargo.toml
cal-rem-lambda/src/: calendar.rs  dynamodb.rs  main.rs  matrix.rs  notifier.rs  notify.rs  parser.rs  s3.rs  todo.rs
cal-rem-shared/: Cargo.toml
cal-rem-wasm/: Cargo.toml  index.css
cal-rem-wasm-com/: Cargo.toml
cal-rem-wasm-com/src/: lib.rs
cal-rem-wasm/src/: calendar.rs  lib.rs  todo.rs
