[package]
name = "cal-rem-lambda"
version = "0.1.0"
authors = ["Geirmund Simonsen <geirmund.simonsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "io-util", "sync", "rt-multi-thread"] }
lambda_runtime = "0.3"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
futures = "0.3.15"
regex = "1.5"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.19"
chrono-tz = "0.5"
rand = { version = "0.8.3", features = ["small_rng"] }
bytes = "1"
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-sdk-dynamodb" }
s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.10-alpha", package = "aws-sdk-s3" }
cal-rem-shared = { path = "../cal-rem-shared" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"