[package]
name = "cal-rem-wasm-com"
version = "0.1.0"
authors = ["Geirmund Simonsen <geirmund.simonsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.19"
chrono-tz = "0.5"